# plugin.video.jacktook

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  README.md  addon.xml  jackewlarr.py  jackktorr.py  jacktook.py  jacktook.select.json  jacktorr.py  pyproject.toml  requirements-test.txt  service.py  update-news.sh  updater_fen.py
lib/: actions.py  anilist.py  anizip.py  debrid.py  download_manager.py  downloader.py  fanart.py  fanarttv.py  files_history.py  indexer.py  navigation.py  play.py  playback.py  player.py  plex.py  providers.py  router.py  search.py  simkl.py  subtitles.py  telegram.py  titles_history.py  tmdb.py  tmdb_anime.py  trakt.py  updater.py
lib/actions/: search_action.py
lib/api/: anilist_api.py  jacktorr_api.py  premiumize_api.py  real_debrid_api.py  simkl_api.py
lib/api/burst/: provider.py
lib/api/debrid/: alldebrid.py  base.py  debrid_client.py  debrider.py  easydebrid.py  offcloud.py  premiumize.py  premiumize_api.py  real_debrid_api.py  realdebrid.py  tor_box_api.py  torbox.py
lib/api/debrid_apis/: debrid_client.py  premiumize_api.py  real_debrid_api.py  tor_box_api.py
lib/api/fanart/: apibase.py  base.py  fanart.py  fanarttv.py  utils.py
lib/api/imdb/: imdb_scraper.py
lib/api/jacktook/: kodi.py  provider.py
lib/api/jacktorr/: jacktorr.py
lib/api/mdblist/: mdblist.py
lib/api/plex/: media_server.py  media_server_api.py  plex.py  plex_api.py  settings.py  utils.py
lib/api/stremio/: addon_manager.py  api_client.py  models.py
lib/api/tmdbv3api/: as_obj.py  tmdb.py  utils.py
lib/api/trakt/: base_cache.py  lists_cache.py  main_cache.py  trakt.py  trakt_api.py  trakt_cache.py  trakt_utils.py  utils.py
lib/api/transmission/: __init__.py  client.py
lib/api/tvdbapi/: tvdbapi.py
lib/api/webdav/: webdav.py
lib/clients/: anilist.py  anizip.py  base.py  burst.py  easynews.py  elfhosted.py  elhosted.py  external_scraper.py  fma.py  introdb.py  jackett.py  jackgram.py  jacktook_burst.py  medifusion.py  peerflix.py  plex.py  plex_client.py  prowlarr.py  search.py  simkl.py  stremio_addon.py  torrentio.py  utils.py  youtube_resolver.py  zilean.py
lib/clients/aisubtrans/: deepl.py  opensubstremio.py  sub_manager.py  submanager.py  utils.py
lib/clients/tmdb/: base.py  (+7 more)
lib/db/: anime.py  anime_db.py  bookmark.py  bookmark_db.py  cached.py  database.py  main.py  main_db.py  pickle_db.py
lib/domain/: cached_source.py  quality_tier.py  source.py  torrent.py
lib/gui/: actor_info_window.py  base_window.py  custom_dialogs.py  custom_progress.py  download_manager_window.py  excluded_languages_dialog.py  external_scraper_dialog.py  extras_window.py  filter_items_window.py  filter_type_window.py  next_window.py  play_next_window.py  play_window.py  qr_progress_dialog.py  resolver_window.py  resume_window.py  search_status_window.py  skip_intro_window.py  source_manager_dialog.py  source_pack_select.py  source_pack_window.py  source_section_manager.py  source_select.py  source_select_new.py  source_window.py
lib/jacktook/: client.py  listener.py  provider_base.py  providers.py  utils.py
lib/nav/: __init__.py  debrid.py  library_history.py
lib/services/: autostart.py  background_service.py  migrations.py  preloader.py  subtitle_server.py  trakt_sync.py  webserver.py  widget_refresh.py
lib/sources_tools/: __init__.py  cache_enricher.py  enricher.py  enricher_builder.py  filter_builder.py  is_pack_enricher.py  language_enricher.py  quality_enricher.py  stats_enricher.py
lib/stremio/: addons_manager.py  catalogs.py  categories.py  client.py  stream.py  ui.py
lib/torf/: _torrent.py
lib/utils/: ad_utils.py  anilist_utils.py  anizip_utils.py  catalogs_utils.py  client_utils.py  countries.py  custom_dialogs.py  debrid_utils.py  ed_utils.py  general_utils.py  items_menus.py  kodi.py  kodi_utils.py  language_detection.py  paginator.py  pm_utils.py  processors.py  rd_utils.py  resolve_to_magnet.py  seasons.py  settings.py  simkl_utils.py  tmdb_consts.py  tmdb_init.py  tmdb_utils.py  torbox_utils.py  torrent_utils.py  torrentio_utils.py  utils.py
resources/: settings.xml
resources/lib/: anilist.py  cached.py  client.py  clients.py  database.py  debrid.py  download.py  fanarttv.py  files_history.py  flatbencode.py  indexer.py  jackett.py  kodi.py  navigation.py  play.py  player.py  providers.py  simkl.py  titles_history.py  tmdb.py  util.py  utils.py
resources/web/: index.html  upload.html
scripts/: check_py37_compat.py  manage_labels.py
tests/: conftest.py  manual_easynews_test.py  manual_torbox_cloud_test.py  mocks.py  verify_debrid.py
tests/fixtures/: jackett_response.xml  realdebrid_response.json
tests/unit/: test_alldebrid_auth.py  test_autoscrape.py  test_base_window_focus_cache.py  test_base_window_source_extraction.py  test_burst_client.py  test_check_py37_compat.py  test_clear_tmdb_cache.py  test_cloud_download.py  test_debrid_utils.py  test_download_manager.py  test_download_manager_window.py  test_downloader.py  test_excluded_languages.py  test_external_scraper.py  test_extras_window.py  test_general_utils.py  test_jackett.py  test_kodi_formats.py  test_kodi_utils.py  test_library_menu_clear.py  test_library_stremio.py  test_library_view.py  test_navigation_debrid_module.py  test_navigation_library_history_module.py  test_offcloud.py  test_parse_time.py  test_player.py  test_player_utils.py  test_playnext_behavior.py  test_preprocess_filters.py  test_processors.py  test_prowlarr.py  test_qr_progress_dialog.py  test_realdebrid.py  test_realdebrid_helper.py  test_router.py  test_router_tmdb_search_modes.py  test_search.py  test_search_status_window.py  test_search_title_fallback.py  (+36 more)
(+201 files in other folders)
